# terraform-rag-template-using-amazon-bedrock

./: .checkov.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstlye  AUTHORS  README.md  THIRD_PARTY_LICENSES  pyproject.toml  rag_demo.ipynb
python/src/handlers/data_ingestion_processor/: Dockerfile  handler.py  requirements.txt
python/tests/: test_data_ingestion.py
python/tests/events/: bucket_notification.json
python/tests/handlers/: test_data_ingestion_processor.py
terraform/: commons.tfvars  data.tf  locals.tf  main.tf  variables.tf
terraform/policies/: data_ingestion_processor.json  kms.json
