[tool.poetry]
name = "bedrock-rag-template"
version = "0.1.0"
description = ""
authors = ["Julian Grueber <juligrue@amazon.com>"]


[tool.poetry.dependencies]
python = "^3.10.14"
aws-lambda-powertools = { version = "^2.33.1", extras = ["tracer"] }
httpx = "^0.26.0"
aws_xray_sdk = "^2.12.1"
tiktoken = "^0.5"
langchain = "^0.1.11"
typing-extensions = "^4.8"
boto3 = "^1.28"
docx2txt = "^0.8"
pypdf = "^3.17.1"
pgvector = "^0.2.4"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
nltk = "^3.8.1"
instructor = "^0.3.5"
jq = "^1.6.0"
ipykernel = "^6.29.4"
unstructured = "^0.10.25"
urllib3 = "^2.2.2"
tornado = "^6.4.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tornado = "^6.4.1"
urllib3 = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
